--- a/translations/kangyur/placeholders/096-052_toh803,1050-the_incantation_for_being_invulnerable_to_infectious_fevers_and_vermin.xml
+++ b/translations/kangyur/placeholders/096-052_toh803,1050-the_incantation_for_being_invulnerable_to_infectious_fevers_and_vermin.xml
@@ -4,13 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rims dang srog chags kyis mi tshugs pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for being Invulnerable to Infectious Fevers and Vermin</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rims dang srog chags kyis mi tshugs pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rims dang srog chags kyis mi tshugs pa zhes bya ba'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-40"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -38,7 +40,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-15T14:30:11.145Z" user="admin">15/12/2022 14:30:11</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:30:06.785Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:30:06.785Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-12-15T14:30:43.012Z" user="admin">15/12/2022 14:30:43</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-12-15T14:30:06.785Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-15T14:30:06.785Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-15T14:30:41.508Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
